# neural-net

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.12BCDAB68F3A886B.idx  n-net.cpp.62FE3CD66A4EB5E8.idx  n-net.h.FD81C77CF280BDE7.idx  n-net.hpp.54EDCCBD1AACDB34.idx  neuron.cpp.C44CADE9BABF7192.idx  neuron.hpp.11BF1274B5E5901A.idx
c/: CMakeLists.txt  main.c
c/.cache/clangd/index/: imageloader.c.33121400EDABB8AD.idx  imageloader.h.2B7F16030A9579C3.idx  main.c.911305D8186ECE05.idx  net.c.32BBFAA4F1BE6C5D.idx  neural-net.h.3FAE4DE93A11258A.idx  neuron.c.F4CBB3B144159703.idx
c/include/: imageloader.h  neural-net.h
c/src/: net.c  neuron.c
cpp/: CMakeLists.txt  main.cpp
cpp/.cache/clangd/index/: dataloader.cpp.BFD7F494B3C0018F.idx  dataloader.h.E17AE15D94E33A3D.idx  lodepng.cpp.A7FDC9274B1B9C9D.idx  lodepng.h.C44680A59E8F605B.idx  main.cpp.3B2C063417B83D41.idx  n-net.cpp.0E21A5BEE54501A7.idx  n-net.h.19575EC97F2B8343.idx  n-net.h.EDE9445F0046DA99.idx  neuron.cpp.431A33672C380E7D.idx  test_main.cpp.57384C892233F412.idx  test_neuron.cpp.037C5952B1C197A3.idx
cpp/include/: dataloader.h  n-net.h
cpp/src/: dataloader.cpp  n-net.cpp  n-net.h  neuron.cpp
cpp/tests/: CMakeLists.txt  test_main.cpp  test_neuron.cpp
src/: dataloader.cpp  n-net.cpp  n-net.h  neuron.cpp
